--- a/grc338/redesign-content-hierarchy/style.css
+++ b/grc338/redesign-content-hierarchy/style.css
@@ -1,4 +1,182 @@
 /*CSS DOCUMENT*/
-img{
+.cover img{
     width: 100%;
 }
+
+.history img{
+    float: left;
+    width: 50%;
+    margin-right: 1.5em;
+    margin-bottom: 1em;
+    max-width: 300px;
+}
+
+.small{
+    width: 40%;
+}
+
+body{
+    width: 100%;
+    margin: 0;
+    font-family: futura-pt, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    background-color: #782113;
+}
+
+/*logo*/
+.head img{
+    width: 40%;
+    float: left;
+    max-width: 400px;
+    padding-left: 2em;
+    padding-top: 1em;
+    padding-bottom: 1em;
+}
+
+.overlap{
+    position: absolute;
+    top: 50%;
+    left: 5%;
+    right: 60%;
+}
+
+.center-overlap{
+    position: absolute;
+    left: 20%;
+    right: 20%;
+    bottom: 30%;
+    text-align: center;
+    font-size: 3em;
+}
+
+.big{
+    font-size: 3em;
+}
+
+.home{
+    clear: both;
+    position: relative;
+}
+
+.mainmenu a{
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+}
+
+.mainmenu ul{
+    list-style-type: none;
+    float: right;
+    padding-left: 0;
+    padding-top: 1em;
+}
+
+.mainmenu li{
+    float: left;
+    margin-right: 2em;
+    text-transform: uppercase;
+    padding: 1em;
+}
+
+.button:hover{
+    background-color: rgb(255, 255, 255);
+    color: #782113;
+}
+
+.button:hover a{
+    color: #782113;
+}
+
+.button{
+    border-style: solid;
+    border-color: rgb(255,255,255);
+    border-width: .2em;
+    border-radius: 2em;
+    font-weight: 700;
+}
+
+.history{
+    clear: both;
+    width: 70%;
+    background-color: rgb(255, 255, 255);
+    padding-left: 15%;
+    padding-right: 15%;
+    padding-top: 3em;
+    padding-bottom: 13em;
+    max-height: 27em;
+}
+
+.connect{
+    clear: both;
+    background-color: rgb(255, 255, 255);
+    width: 60%;
+    padding-top: 1em;
+    padding-left: 20%;
+    padding-right: 20%;
+    padding-bottom: 3em;
+    text-align: center;
+}
+
+h1{
+    color: rgb(255, 255, 255);
+    margin: 0;
+    font-weight: 700;
+    
+}
+h2{
+    color: rgb(255, 255, 255);
+    text-align: center;
+    font-weight: 700;
+    font-style: italic; 
+}
+
+.cover h2{
+    font-weight: 500;
+}
+
+.connect h2{
+    margin: 0;
+    color: #782113; 
+}
+
+.history h2{
+    margin-bottom: 1.5em;
+    color: #782113; 
+}
+
+footer{
+    color: rgb(255, 255, 255);
+    text-align: center;
+    font-size: 1em;
+    clear: both;
+}
+
+.history p{
+    color: rgb(0,0,0);
+    max-width: 50em;
+    margin: 0;
+}
+
+.connect p{
+    color: rgb(0,0,0);
+    margin-top: .5em;
+    margin-bottom: 2.5em;
+}
+
+.tour{
+    color: #782113;
+    text-decoration: none;
+    font-weight: 700;
+    border-style: solid;
+    border-color: #782113;
+    border-width: .2em;
+    border-radius: 2em;
+    padding: 1em;
+    display: inline-block;
+}
+
+.tour:hover{
+    background-color: #782113;
+    color: rgb(255, 255, 255);
+}
+
