--- a/grc338/redesign-content-hierarchy/style.css
+++ b/grc338/redesign-content-hierarchy/style.css
@@ -34,31 +34,6 @@ body{
     padding-bottom: 1em;
 }
 
-.overlap{
-    position: absolute;
-    top: 50%;
-    left: 5%;
-    right: 60%;
-}
-
-.center-overlap{
-    position: absolute;
-    left: 20%;
-    right: 20%;
-    bottom: 30%;
-    text-align: center;
-    font-size: 3em;
-}
-
-.big{
-    font-size: 3em;
-}
-
-.home{
-    clear: both;
-    position: relative;
-}
-
 .mainmenu a{
     text-decoration: none;
     color: rgb(255, 255, 255);
@@ -102,7 +77,7 @@ body{
     padding-left: 15%;
     padding-right: 15%;
     padding-top: 3em;
-    padding-bottom: 13em;
+    padding-bottom: 20em;
     max-height: 27em;
 }
 
@@ -117,31 +92,29 @@ body{
     text-align: center;
 }
 
-h1{
-    color: rgb(255, 255, 255);
-    margin: 0;
-    font-weight: 700;
-    
+.home{
+    background-color: rgb(255, 255, 255);
+    width: 80%;
+    padding-top: 3em;
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-bottom: 3em;
+    text-align: center;
 }
-h2{
-    color: rgb(255, 255, 255);
+
+h1{
     text-align: center;
     font-weight: 700;
-    font-style: italic; 
+    font-style: normal; 
+    color: #782113;
 }
 
-.cover h2{
-    font-weight: 500;
+.connect h1{ 
+    margin-top: 1.5em;
 }
 
-.connect h2{
-    margin: 0;
-    color: #782113; 
-}
-
-.history h2{
+.history h1{
     margin-bottom: 1.5em;
-    color: #782113; 
 }
 
 footer{
@@ -180,3 +153,16 @@ footer{
     color: rgb(255, 255, 255);
 }
 
+h2{
+    font-weight: 500;
+    font-style: italic; 
+    color: #782113;
+    margin-bottom: .2em;
+    text-align: center;
+}
+
+.home h1{
+    font-weight: 700;
+    clear: both;
+    color: #782113;
+}
