--- a/grc338/redesign-content-hierarchy/style.css
+++ b/grc338/redesign-content-hierarchy/style.css
@@ -126,7 +126,8 @@ footer{
 .history p{
     color: rgb(0,0,0);
     max-width: 50em;
-    margin: 0;
+    margin-top: 0;
+    margin-bottom: 1em;
 }
 
 .connect p{
