--- a/grc338/redesign-content-hierarchy/style.css
+++ b/grc338/redesign-content-hierarchy/style.css
@@ -53,23 +53,6 @@ body{
     padding: 1em;
 }
 
-.button:hover{
-    background-color: rgb(255, 255, 255);
-    color: #782113;
-}
-
-.button:hover a{
-    color: #782113;
-}
-
-.button{
-    border-style: solid;
-    border-color: rgb(255,255,255);
-    border-width: .2em;
-    border-radius: 2em;
-    font-weight: 700;
-}
-
 .history{
     clear: both;
     width: 70%;
@@ -136,7 +119,7 @@ footer{
     margin-bottom: 2.5em;
 }
 
-.tour{
+.button{
     color: #782113;
     text-decoration: none;
     font-weight: 700;
@@ -146,9 +129,10 @@ footer{
     border-radius: 2em;
     padding: 1em;
     display: inline-block;
+    margin-bottom: 2em;
 }
 
-.tour:hover{
+.button:hover{
     background-color: #782113;
     color: rgb(255, 255, 255);
 }
