--- a/grc338/redesign-content-hierarchy/style.css
+++ b/grc338/redesign-content-hierarchy/style.css
@@ -130,6 +130,9 @@ footer{
     padding: 1em;
     display: inline-block;
     margin-bottom: 2em;
+    margin-right: 1em;
+    margin-left: 1em;
+    clear: both;
 }
 
 .button:hover{
