--- a/grc338/redesign-content-hierarchy/style.css
+++ b/grc338/redesign-content-hierarchy/style.css
@@ -1,155 +1,4 @@
 /*CSS DOCUMENT*/
-.cover img{
+img{
     width: 100%;
-}
-
-.history img{
-    float: left;
-    width: 50%;
-    margin-right: 1.5em;
-    margin-bottom: 1em;
-    max-width: 300px;
-}
-
-.small{
-    width: 40%;
-}
-
-body{
-    width: 100%;
-    margin: 0;
-    font-family: futura-pt, sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    background-color: #782113;
-}
-
-/*logo*/
-.head img{
-    width: 40%;
-    float: left;
-    max-width: 400px;
-    padding-left: 2em;
-    padding-top: 1em;
-    padding-bottom: 1em;
-}
-
-.mainmenu a{
-    text-decoration: none;
-    color: rgb(255, 255, 255);
-}
-
-.mainmenu ul{
-    list-style-type: none;
-    float: right;
-    padding-left: 0;
-    padding-top: 1em;
-}
-
-.mainmenu li{
-    float: left;
-    margin-right: 2em;
-    text-transform: uppercase;
-    padding: 1em;
-}
-
-.history{
-    clear: both;
-    width: 70%;
-    background-color: rgb(255, 255, 255);
-    padding-left: 15%;
-    padding-right: 15%;
-    padding-top: 3em;
-    padding-bottom: 15em;
-}
-
-.connect{
-    clear: both;
-    background-color: rgb(255, 255, 255);
-    width: 60%;
-    padding-top: 1em;
-    padding-left: 20%;
-    padding-right: 20%;
-    padding-bottom: 3em;
-    text-align: center;
-}
-
-.home{
-    background-color: rgb(255, 255, 255);
-    width: 80%;
-    padding-top: 3em;
-    padding-left: 10%;
-    padding-right: 10%;
-    padding-bottom: 3em;
-    text-align: center;
-}
-
-h1{
-    text-align: center;
-    font-weight: 700;
-    font-style: normal; 
-    color: #782113;
-}
-
-.connect h1{ 
-    margin-top: 1.5em;
-}
-
-.history h1{
-    margin-bottom: 1.5em;
-}
-
-footer{
-    color: rgb(255, 255, 255);
-    text-align: center;
-    font-size: 1em;
-    clear: both;
-}
-
-.history p{
-    color: rgb(0,0,0);
-    max-width: 50em;
-    margin-top: 0;
-    margin-bottom: 2em;
-}
-
-.connect p{
-    color: rgb(0,0,0);
-    margin-top: .5em;
-    margin-bottom: 2.5em;
-}
-
-.button{
-    color: #782113;
-    text-decoration: none;
-    font-weight: 700;
-    border-style: solid;
-    border-color: #782113;
-    border-width: .2em;
-    border-radius: 2em;
-    padding: 1em;
-    display: inline-block;
-    margin-bottom: 2em;
-    margin-right: 1em;
-    margin-left: 1em;
-    clear: both;
-}
-
-.button:hover{
-    background-color: #782113;
-    color: rgb(255, 255, 255);
-}
-
-h2{
-    font-weight: 500;
-    font-style: italic; 
-    color: #782113;
-    margin-bottom: .2em;
-    text-align: center;
-}
-
-.home h1{
-    font-weight: 700;
-    clear: both;
-    color: #782113;
 }
