--- a/grc338/redesign-mobile-first/style.css
+++ b/grc338/redesign-mobile-first/style.css
@@ -1,5 +1,5 @@
 /*CSS DOCUMENT*/
-.cover img{
+img{
     width: 100%;
 }
 
@@ -9,10 +9,6 @@
     margin-right: 1.5em;
     margin-bottom: 1em;
     max-width: 300px;
-}
-
-.small{
-    width: 40%;
 }
 
 body{
@@ -29,9 +25,9 @@ body{
     width: 40%;
     float: left;
     max-width: 400px;
-    padding-left: 2em;
-    padding-top: 1em;
-    padding-bottom: 1em;
+    margin-left: 3em;
+    margin-top: 5%;
+    margin-bottom: 5%;
 }
 
 .mainmenu a{
@@ -42,8 +38,9 @@ body{
 .mainmenu ul{
     list-style-type: none;
     float: right;
-    padding-left: 0;
-    padding-top: 1em;
+    padding-left: 0; /* resets default padding*/
+    margin-top: 5%;
+    margin-bottom: 5%;
 }
 
 .mainmenu li{
@@ -51,6 +48,7 @@ body{
     margin-right: 2em;
     text-transform: uppercase;
     padding: 1em;
+    font-size: 1.5em;
 }
 
 .history{
@@ -60,17 +58,17 @@ body{
     padding-left: 15%;
     padding-right: 15%;
     padding-top: 3em;
-    padding-bottom: 15em;
+    padding-bottom: 3em;
 }
 
 .connect{
     clear: both;
     background-color: rgb(255, 255, 255);
     width: 60%;
-    padding-top: 1em;
+    padding-top: 3em;
     padding-left: 20%;
     padding-right: 20%;
-    padding-bottom: 3em;
+    padding-bottom: 5em;
     text-align: center;
 }
 
@@ -89,33 +87,29 @@ h1{
     font-weight: 700;
     font-style: normal; 
     color: #782113;
-}
-
-.connect h1{ 
-    margin-top: 1.5em;
-}
-
-.history h1{
     margin-bottom: 1.5em;
 }
 
-footer{
-    color: rgb(255, 255, 255);
-    text-align: center;
+.foot{
     font-size: 1em;
     clear: both;
+    position: absolute;
+    width: 100%;
+    background-color: #782113;
+    color: rgb(255, 255, 255);
+    text-align: center;
 }
 
 .history p{
     color: rgb(0,0,0);
     max-width: 50em;
-    margin-top: 0;
+    margin-top: 0em;
     margin-bottom: 2em;
 }
 
 .connect p{
     color: rgb(0,0,0);
-    margin-top: .5em;
+    margin-top: 0em;
     margin-bottom: 2.5em;
 }
 
@@ -129,7 +123,6 @@ footer{
     border-radius: 2em;
     padding: 1em;
     display: inline-block;
-    margin-bottom: 2em;
     margin-right: 1em;
     margin-left: 1em;
     clear: both;
@@ -146,10 +139,4 @@ h2{
     color: #782113;
     margin-bottom: .2em;
     text-align: center;
-}
-
-.home h1{
-    font-weight: 700;
-    clear: both;
-    color: #782113;
 }
