--- a/grc338/redesign-final/style.css
+++ b/grc338/redesign-final/style.css
@@ -8,7 +8,7 @@ img{
     width: 50%;
     margin-right: 1.5em;
     margin-bottom: 1em;
-    max-width: 300px;
+    max-width: 20em;
 }
 
 body{
@@ -26,8 +26,8 @@ body{
     float: left;
     max-width: 400px;
     margin-left: 3em;
-    margin-top: 5%;
-    margin-bottom: 5%;
+    margin-top: 2em;
+    margin-bottom: 1em;
 }
 
 .mainmenu a{
@@ -39,16 +39,16 @@ body{
     list-style-type: none;
     float: right;
     padding-left: 0; /* resets default padding*/
-    margin-top: 5%;
-    margin-bottom: 5%;
+    margin-top: 2em;
+    margin-bottom: 1em;
 }
 
 .mainmenu li{
     float: left;
-    margin-right: 2em;
+    margin-right: 1.5em;
     text-transform: uppercase;
     padding: 1em;
-    font-size: 1.5em;
+    font-size: 1.2em;
 }
 
 .history{
@@ -58,7 +58,7 @@ body{
     padding-left: 15%;
     padding-right: 15%;
     padding-top: 3em;
-    padding-bottom: 3em;
+    padding-bottom: 10em;
 }
 
 .connect{
@@ -69,12 +69,11 @@ body{
     padding-left: 20%;
     padding-right: 20%;
     padding-bottom: 5em;
-    text-align: left;
+    text-align: center;
 }
 
 .contactinfo{
-    padding-right:20%;
-    padding-left:20%;
+    width: 15em;
 }
 
 .home{
@@ -146,6 +145,37 @@ h2{
     text-align: center;
 }
 
-@media only screen and (min-width: 25em){
+.connectintro{
+    text-align: left; 
+    display: inline-block;
+    max-width: 30em;
+}
+
+@media screen and (min-width: 0em) and (max-width:56.3em){
+    .button{
+        border-radius: 3em;
+        margin-bottom: 2em;
+    }
+}
+@media screen and (min-width: 0em) and (max-width:50em){
+    .history {
+        padding-bottom: 2em;
+    }
     
+    .mainmenu li{
+        font-size: 1em;
+        margin-right: 1em;
+    }
+}
+
+@media screen and (min-width: 50em) and (max-width:60em){
+    .history {
+        padding-bottom: 3em;
+    }
+}
+
+@media screen and (min-width: 60em) and (max-width:70em){
+    .history {
+        padding-bottom: 6em;
+    }
 }
