--- a/grc339/final-website-mobile-first/style.css
+++ b/grc339/final-website-mobile-first/style.css
@@ -43,13 +43,14 @@ ul {
     text-align: center;
     padding:0 0 1.5em;
     margin:0;
+    color:rgb(180,180,180);
 }
 
 ul li{
     margin-bottom: .3em;
 }
 
-nav a:visited, ul{
+nav a:visited{
     color:rgb(180,180,180);
 }
 
@@ -104,6 +105,7 @@ section p{
     padding: 1em 2em 2em;
     margin: 0;
     background-color: rgb(210,210,210);
+    color:rgb(60,60,60);
 }
 
 h3{
