--- a/grc339/final-website-mobile-first/style.css
+++ b/grc339/final-website-mobile-first/style.css
@@ -2,7 +2,7 @@
 body {
     margin: auto;
     
-    font-family: futura-pt, sans-serif; /*futura-pt-condensed or futura-pt-bold*/
+    font-family: futura-pt, sans-serif;
     font-weight: 400; /*700*/
     font-style: normal; /*italic*/ 
     color:rgb(60,60,60);
